# ai-quota-monitor

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-crx.yml
desktop-tray/: Cargo.toml
desktop-tray/src/: app.rs  autostart.rs  icon.rs  main.rs  model.rs  server.rs
scripts/: package-crx.mjs  package-zip.mjs
src/: index.css  manifest.json
src/background/: alarm.ts  contextMenu.ts  index.ts  messaging.ts  platformManager.ts  trayBridge.ts
src/components/: AddPlatformDialog.tsx  CopilotSubscriptionDialog.tsx  DepletionTimeline.tsx  PlatformCard.tsx  PlatformPriceDialog.tsx  ProgressBar.tsx  QuotaHistoryChart.tsx  StatusBadge.tsx  TrendSummary.tsx
src/content-scripts/: chatgpt.ts  github-copilot.ts  kimi.ts
src/hooks/: usePlatformHistory.ts  usePlatforms.ts
src/popup/: App.tsx
src/shared/: burden.ts  constants.ts  cycle.ts  messaging.ts  platformSorting.ts  pricing.ts  quotaHistory.ts  storage.ts  types.ts  workingTime.ts
src/sidepanel/: App.tsx  index.html  index.tsx
