[package]
name = "ai-monitor-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
dirs = "6.0"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net"] }
tray-icon = "0.21"
tao = "0.34"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
